fix: item spacing

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -5,11 +5,11 @@ body
   
 .page
   margin: var(--vertical-three) 0
-  // border: 2px solid green
   .item
-    // border: 2px solid blue
     opacity: 0
-    margin-bottom: 150px
+    margin-bottom: 10rem
+    &:last-child
+      margin-bottom: 0
 
 section
   max-width: 100%
