--- a/assets/styles/typography.sass
+++ b/assets/styles/typography.sass
@@ -84,8 +84,8 @@ p
 
 .typeStroke
   color: transparent
-  -webkit-text-stroke-width: 2px
-  text-stroke-width: 2px
+  -webkit-text-stroke-width: 1.5px
+  text-stroke-width: 1.5px
   -webkit-text-stroke-color: black
   text-stroke-color: black
   
