--- a/assets/styles/vars/variables.sass
+++ b/assets/styles/vars/variables.sass
@@ -32,14 +32,14 @@ body
   // --spacing-one: 2vmin
   // --spacing-two: 4vmin
   // --spacing-three: 8vmin
-  --spacing-sides: 6.25vw
+  --spacing-sides: 5rem
   --spacing-one: 2.5rem
   --vertical-one: 2.5rem
   --vertical-two: 3rem
   --vertical-three: 6.25rem
   --vertical-four: 12.5rem
   @media screen and ( max-width: $breakpoint-mobile)
-    --spacing-sides: 6.25vw
+    --spacing-sides: 5rem
     --spacing-one: 2.5rem
     --vertical-one: 2.5rem
     --vertical-two: 3rem
